--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Ideas</h1>
 
+<%= button_to "Submit a new idea", new_idea_path, :method => "get" %>
+
 <ul>
   <% @ideas.each do |idea| %>
-    <li><%= link_to idea.name, idea.path %></li>
+    <li><%= link_to idea.name, idea %></li>
+    <p> <%= idea.tagline %> </p>
   <% end %>
 </ul>
