--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -8,9 +8,9 @@
   <body>
     <h1> EzHackathons </h1>
     <h4> Supporting and displaying the ideas and projects for EzCater’s past, present, and upcoming hackathons! </h3>
-
-    <%= button_to "Ideas", ideas_path, :method => "get" %>
-    <%= button_to "Projects", projects_path, :method => "get" %>
-    <%= button_to "Hackathons", hackathons_path, :method => "get" %>
+  
+    <%= button_to "Ideas", ideas_path, :method => "get", class:"button" %>
+    <%= button_to "Projects", projects_path, :method => "get", class:"button" %>
+    <%= button_to "Events", events_path, :method => "get", class:"button" %>
   </body>
 </html>
