--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -9,7 +9,7 @@
 <h4>What resources do you need to be successful? (a skillset, person, access to a technology etc)</h4>
 <%= @idea.resources%>
 
-<h4>Will you need access to Snowflake (data)?</h4>
+<h4>This idea will need access to Snowflake (data):</h4>
 <%= @idea.snowflake_access%>
 
 <h4>What value will this idea deliver?</h4>
@@ -20,5 +20,5 @@
 
 <h4>How many "people hours" do you estimate it will take to plan, scope and demo?</h4>
 <%= @idea.hours_estimate%>
-<%= button_to "Edit", edit_idea_path, :method => "get" %>
+<%= button_to "Edit", edit_idea_path, :method => "get", class:"button" %>
 
