--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     <div class="field">
-        <%= f.label :silly_answers %><br />
+        What's a fun fact that you know?<br />
         <%= f.text_area :silly_answers %>
     </div>
 
