--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@ body {
      font-family:monospace;
  }
 
- h1 {
+ h1, h3 {
      text-align: center;
      border-style: dashed;
      border-color: rgb(81, 190, 81);
@@ -40,6 +40,14 @@ body {
     border-radius: 8px;
     padding: 2%
  } 
+
+ .projects {
+    border-style: solid;
+    border-color: rgb(81, 190, 81);
+    border-radius: 8px;
+    margin-top: 5%;
+    padding: 5%
+ }
 
  input, textarea {
     width: 100%;
