--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,15 @@ body {
     border-color: rgb(81, 190, 81);
     border-radius: 8px;
     margin-top: 5%;
-    padding: 5%
+    padding: 5%;
+ }
+
+ .project {
+    margin-bottom: 2em;
+ }
+
+ .tagline {
+     margin-bottom: 1em;
  }
 
  input, textarea {
@@ -58,7 +66,8 @@ body {
     border-color: rgb(81, 190, 81);
     background-color: white;
     border-radius: 8px;
-    padding: 2%
+    padding: 2%;
+    white-space: pre-wrap;
  }
 
  select {
