--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,46 +1,46 @@
 <%= form_for(@idea) do |f| %>
     <div class="field">
-        What is your name?<br />
+        <label class="required-field">What is your name?</label>
         <%= f.text_field :submitter %>
     </div>
 
     <div class="field">
-        What is the name of your idea?<br />
+    <label class="required-field">What is the name of your idea?</label>
         <%= f.text_field :name %>
     </div>
 
     <div class="field">
-        <%= f.label :tagline %><br />
+        <%= f.label :tagline, class: "required-field" %></label>
         <%= f.text_field :tagline %>
     </div>
 
     <div class="field">
-        Describe your idea:<br />
+    <label class="required-field">Describe your idea:</label>
         <%= f.text_field :description %>
     </div>
 
     <div class="field">
-        What resources do you need to be successful? (a skillset, person, access to a technology etc)<br />
+    <label class="required-field">What resources do you need to be successful? (a skillset, person, access to a technology etc)</label>
         <%= f.text_field :resources %>
     </div>
 
     <div class="field">
-        <%= f.label "This idea will need access to Snowflake (data):" %> <br />
-        <%= f.check_box :snowflake_access %> <br />
+        <%= f.label "This idea will need access to Snowflake (data):" %> </label>
+        <%= f.check_box :snowflake_access %> </label>
     </div>
 
     <div class="field">
-        What value will this idea deliver?<br />
+    <label class="required-field">What value will this idea deliver?</label>
         <%= f.text_field :value_delivered %>
     </div>
 
     <div class="field">
-        What is your goal for this idea in the hackathon?<br />
+    <label class="required-field">What is your goal for this idea in the hackathon?</label>
         <%= f.text_field :goal %>
     </div>
 
     <div class="field">
-        How many "people hours" do you estimate it will take to plan, scope and demo?<br />
+    <label class="required-field">How many "people hours" do you estimate it will take to plan, scope and demo?</label>
         <%= f.text_field :hours_estimate %>
     </div>
 
