Ensure edit form is prefilled with existing values

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -13,7 +13,7 @@
 
     <div class="field">
         <%= f.label "Add any links to your final artifacts" %><br />
-        <%= f.text_field :links %>
+        <%= f.text_field :links, value: @project.links %>
     </div>
 
     <div class="field">
