Enable creating and editing projects based on ideas (#10)
## What did we change?

* Changed projects so they can be created from a dropdown of ideas
* Ensured projects can be edited
* Fixed some links to editing projects

## Why are we doing this?

We want to be able to create projects from ideas so we aren't duplicating info onto both models.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <p><%= link_to "Back to Events", events_path %></p>
-<h1> <%=@time%> </h1>
-<h3> <%=@event.place%> </h3>
+<h1> <%= format_date(@event.time) %> </h1>
+<h3> <%= @event.place%> </h3>
 
 <h4>Agenda:</h4>
 <pre><%= @event.agenda%></pre>
@@ -19,15 +19,15 @@
 
   <% @projects.each do |project|%>
     <div class="project">
-      <a href=<%=project.links%>><%="#{project.name}: #{project.tagline}"%></a>
+      <a href=<%=project.links%>><%="#{project.idea.name}: #{project.idea.tagline}"%></a>
       <div class="tagline">
-        <%=project.description%>
+        <%=project.idea.description%>
       </div>
-      <%= link_to "Edit Project", edit_event_project_path(@event), :method => "get" %>
+      <%= link_to "Edit Project", edit_event_project_path(@event, project), :method => "get" %>
     </div>
   <% end %>
 
-  <%=button_to "Add a New Project", new_event_project_path(@event), :method => "get", class:"button" %>
+  <%= button_to "Add a New Project", new_event_project_path(@event), :method => "get", class:"button" %>
 </div>
 
   <%= button_to "Edit Event", edit_event_path, :method => "get", class:"button" %>
