--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,10 +19,11 @@
 
   <% @projects.each do |project|%>
     <div class="project">
-      <a href=<%=project.links%>><%="#{project.idea.name}: #{project.idea.tagline}"%></a>
+      <h4><%="#{project.idea.name}: #{project.idea.tagline}"%></h4>
       <div class="tagline">
         <%=project.idea.description%>
       </div>
+      <a href=<%=project.links%>>Project Artifact</a>
       <%= link_to "Edit Project", edit_event_project_path(@event, project), :method => "get" %>
     </div>
   <% end %>
