--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,7 +23,9 @@
       <div class="tagline">
         <%=project.idea.description%>
       </div>
-      <a href=<%=project.links%>>Project Artifact</a>
+      <% if project.links.present? %>
+        <a href=<%=project.links%>>Project Artifact</a>
+      <% end %>
       <%= link_to "Edit Project", edit_event_project_path(@event, project), :method => "get" %>
     </div>
   <% end %>
