--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -1,7 +1,7 @@
 <h1><%= format_month(@event.time)%> Voting</h1>
 
-<% if @strategy.user_started_voting? %>
-  <%= render partial: "voting", locals: { strategy: @strategy } %>
+<% if @state.user_started_voting? %>
+  <%= render partial: "voting", locals: { state: @state } %>
 <% else %>
   <h2>Welcome, we hacked, now we vote!</h2>
 
@@ -10,7 +10,7 @@
   </p>
 
   <ul>
-    <% @strategy.awards.each do |award| %>
+    <% @state.awards.each do |award| %>
       <li>"<%= award.title %>"</li>
     <% end %>
   </ul>
@@ -20,7 +20,7 @@
   </p>
 
   <ul>
-    <% @strategy.projects.each do |project| %>
+    <% @state.ordered_projects.each do |project| %>
       <li><%= project.idea.name %></li>
     <% end %>
   </ul>
@@ -30,9 +30,10 @@
   <% if @event.voting_enabled? %>
     <p>To start voting, first enter a username.</p>
     <%= form_with(url: new_event_vote_path(@event), method: :get, local: true) do |f| %>
+      <%= f.hidden_field :award_id, value: @state.next_award.id %>
       <%= f.text_field :username, placeholder: "Username", required: true %>
 
-      <%= f.submit("Start voting!", name: nil) %>
+      <%= f.submit("Start voting!", name: nil, id: "start_voting") %>
     <% end %>
   <% else %>
     <p>Voting is not enabled at this time</p>
