update styles to add a line between each project

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,9 @@ body {
  }
 
  .project {
-    margin-bottom: 2em;
+    border-bottom: 3px dashed rgb(81, 190, 81);
+    margin-bottom: 1em;
+    padding-bottom: 1em;
  }
 
  .tagline {
