Update project links on event page (#14)
Makes the project title just a title
Adds a separate link for the project artifact
Artifact link only shows if there is an artifact
Adds a dashed green line between each project

We want the artifact to be an clearly visible and accessible.

Co-authored-by: Tristan Dunn <tristan.dunn@ezcater.com>

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,10 +16,13 @@
 
   <% @projects.each do |project|%>
     <div class="project">
-      <a href=<%=project.links%>><%="#{project.idea.name}: #{project.idea.tagline}"%></a>
+      <h4><%="#{project.idea.name}: #{project.idea.tagline}"%></h4>
       <div class="tagline">
         <%=project.idea.description%>
       </div>
+      <% if project.links.present? %>
+        <a href="<%=project.links%>">Project Artifact</a>
+      <% end %>
       <%= link_to "Edit Project", edit_event_project_path(@event, project), :method => "get" %>
     </div>
   <% end %>
